<resources>
    <string name="app_name">咚哒</string>

    <string name="phone_input_country_code">+86</string>
    <string name="phone_input_hint_phone_number">输入手机号码</string>
    <string name="phone_input_hint_validate_code">输入动态密码</string>
    <string name="phone_input_btn_action_query_code">获取动态密码</string>

    <string name="phone_input_next_step_error">请输入正确的手机号与动态验证密码</string>
    <string name="input_phone_error">请输入正确的手机号!</string>
    <string name="code_no_empty">请输入正确的动态验证密码!</string>

    <string name="name_input_hint_nickname">输入您的姓名</string>

    <string name="net_work_error">网络异常,请改善网络环境并重试</string>
    <string name="type_art">艺术</string>
    <string name="title_art">艺术</string>
    <string name="type_sport">运动</string>
    <string name="title_sport">运动</string>
    <string name="type_science">科学</string>
    <string name="title_science">科学</string>
    <string name="str_de">的</string>
    <string name="low_age">低龄</string>
    <string name="str_qu">区</string>
    <string name="login_success">登陆成功!</string>
    <string name="login_failare">登陆失败!</string>
    <string name="net_status_ok">ok</string>
    <string name="logining_process">正在登陆...</string>
    <string name="wechat_auth_cancel">授权已取消</string>
    <string name="input_name_error">请输入正确的名字!</string>
    <string name="update_user_info_success">修改成功!</string>
    <string name="update_sql_error">系统异常(SQL)</string>
    <string name="phone_not_empty">手机号不能为空!</string>
    <string name="input_code_error">请输入验证码!</string>
    <string name="send_sms_code_success">验证码发送成功!</string>
    <string name="sms_count_down">重新获取(%s)</string>
    <string name="uploading_head_photo">正在上传头像…</string>
    <string name="choose_head_photo">请选择头像!</string>
    <string name="permission_denied">权限拒绝</string>
    <string name="open_camera_permission_setting">请在设置->应用管理->咚哒->权限管理打开相机权限.</string>
    <string name="permisson_denied">无法获取直播需要的权限,请在设置->应用管理->咚哒->权限管理打开权限.</string>
    <string name="go_permission_setting">设置</string>
    <string name="dlg_confirm">确定</string>
    <string name="dlg_cancel">取消</string>
    <string name="data_unknown_error">数据异常(%1$s,%2$s)</string>
    <string name="upload_unknown_error">上传失败(%1$s,%2$s)</string>
    <string name="str_care">看顾</string>
    <string name="str_art">艺术</string>
    <string name="str_sport">运动</string>
    <string name="str_science">科学</string>
    <string name="dlg_tips">提示</string>
    <string name="dlg_processing">正在处理中…</string>
    <string name="input_nickname_error">昵称不能为空!</string>
    <string name="input_about_me_error">关于我不能为空!</string>
    <string name="update_user_info_processing">正在修改信息…</string>
    <string name="str_mtjl">蒙特俊利</string>
    <string name="str_mtjl_title">准备好爱与耐心，自律才能自由</string>
    <string name="str_mtjl_content">「妈妈，帮帮我，让我可以自己做」\n「孩子能做，就别插手」\n追随孩子，Aid to life，蒙特梭利教育（Montessori），是意大利心理学家玛丽亚 · 蒙特梭利发展的教育方法。强调独立，有限度的自由和对孩子天然的心理、生理及社会性发展的尊重。</string>
    <string name="str_jrsyy">浸入式英语</string>
    <string name="str_jrsyy_title">语言，是一种思考方式</string>
    <string name="str_jrsyy_content">Water 就是 Water，不是水。Apple就是圆圆的果子，咬一口。  习得语言，而非学习语言，是对孩子至关重要的概念。ESL（English as a second language）,给孩子们创造时时刻刻应用的契机，无论是学科中还是生活里。</string>
    <string name="str_jxyd_title">跳出温室，体验非凡张力</string>
    <string name="str_jxyd">极限运动</string>
    <string name="str_jxyd_content">惊喜，孩子们无时无刻不在创造惊喜给我们。在这里，突破的不仅仅是身体，还有心理。更重要的是在注视和保护下，用科学的训练方式，探索能力的界限，进行体能的尝试。</string>
    <string name="str_xsyx">修身养性</string>
    <string name="str_xsyx_title">触摸与众不同的感受</string>
    <string name="str_xsyx_content">善琴者通达从容，善棋者筹谋睿智，善书者至情至性，善画者至善至美，善诗者韵至心声，善酒者情逢知己，善茶者陶冶情操，善花者品性怡然。琴棋书画，诗酒花茶。心灵中充满的情趣，将伴随孩子始终，让他们成为生活的欣赏者和创造者。</string>
    <string name="str_steam">STEAM</string>
    <string name="str_steam_title">身临其境，体验科学的力量</string>
    <string name="str_steam_content">科学Science，技术Technology，工程Engineering，艺术Arts，数学Math。以Project-based learning的学习方式，帮助孩子们将知识与兴趣连接。了解世界上正在发生的事儿，自然而然地共同面对和动手解决实际的问题。</string>
    <string name="my_collection">我的收藏</string>
    <string name="confirm_un_like">确定取消收藏吗?</string>
    <string name="location_processing">正在定位...</string>
    <string name="gps_status_nogpsprovider">手机中没有GPS Provider，无法进行GPS定位</string>
    <string name="gps_status_off">GPS关闭，建议开启GPS，提高定位质量</string>
    <string name="gps_status_mode_saving">选择的定位模式中不包含GPS定位，建议选择包含GPS定位的模式，提高定位质量</string>
    <string name="gps_status_nogpspermission">没有GPS定位权限，建议开启gps定位权限</string>
    <string name="go_location_permission_setting">请在设置->应用管理->咚哒->权限管理打开定位权限.</string>
    <string name="open_dec_more">展开</string>
    <string name="close_dec_more">收起</string>
    <string name="str_age">岁</string>
    <string name="str_teacher">%s老师</string>
    <string name="new_wind_sys">新风系统</string>
    <string name="air_clear_sys">空气净化器</string>
    <string name="safe_power">安全插座</string>
    <string name="real_time_protect">实时监控</string>
    <string name="has_wifi">无线WI-FI</string>
    <string name="protect_floor">防摔地板</string>
    <string name="air_humid">加湿器</string>
    <string name="safe_guard">安全护栏</string>
    <string name="safe_table">安全桌角</string>
    <string name="kit_package">急救包</string>
    <string name="confirm_logout">确定退出登录吗?</string>
    <string name="default_about_me">一句话很短，高调的夸一夸自己</string>
    <string name="service_detail">服务详情</string>
    <string name="age_range">适合年龄</string>
    <string name="student_num">班级人数</string>
    <string name="t_s_ratio">师生配比</string>
    <string name="service_dec">服务描述</string>
    <string name="addr_safe_dec">场地安全友好性</string>
    <string name="location_dec">地理位置</string>
    <string name="edit_user_info">编辑个人信息</string>
    <string name="save_user_info">保存</string>
    <string name="nick_name_dec">昵称</string>
    <string name="input_nick_name_hint">请输入昵称</string>
    <string name="about_me_dec">关于我</string>
    <string name="input_about_me_hint">请输入关于我的描述</string>
    <string name="str_featured_subject">精选主题</string>
    <string name="str_care_dec">有温度的0-6岁Daycare</string>
    <string name="show_more">查看更多</string>
    <string name="str_art_dec">在感受中学会欣赏和表达</string>
    <string name="str_sport_dec">成长 激励 汗水和Team work</string>
    <string name="str_science_dec">未来，在这里由宝贝们搭建</string>
    <string name="str_landing_dec">为 孩 子 创 造 与 众 不 同</string>
    <string name="phone_login">手机号登录</string>
    <string name="wechat_login">微信登陆</string>
    <string name="str_input_name_dec">还有，您的姓名?</string>
    <string name="next_step">下一步</string>
    <string name="str_your_phone_dec">您的手机号码?</string>
    <string name="str_change_photo_dec">最后一步, 您的照片?</string>
    <string name="str_enter_dongda">进入咚哒</string>
    <string name="str_album">相册</string>
    <string name="str_camera">相机</string>
    <string name="str_cancel">取消</string>
    <string name="apply_to_service">申请成为服务者</string>
    <string name="setting">设置</string>
    <string name="apply_dec_1">咚哒为0-12岁的孩子</string>
    <string name="apply_dec_2">提供看顾和兴趣教育课程</string>
    <string name="apply_dec_3">出于对用户安全和服务质量的保证</string>
    <string name="apply_dec_4">该功能暂时只对有授权账号的用户开放</string>
    <string name="apply_account">申请获取授权账号</string>
    <string name="input_user_name_hint">请输入姓名</string>
    <string name="input_service_name_hint">请输入品牌名称</string>
    <string name="apply_account_header">申请授权账号</string>
    <string name="tv_next_step">下一步</string>
    <string name="input_name_dec">下午好！\n我应该怎么称呼你？</string>
    <string name="input_service_nme_dec">如果有品牌名称,也请告诉我们</string>
    <string name="apply_input_city_name_hint">请输入城市</string>
    <string name="apply_input_phone_hint">请输入手机号</string>
    <string name="str_class">课程</string>
    <string name="str_experience">体验</string>
    <string name="my_brand_header">我的品牌</string>
    <string name="about_brand">关于品牌</string>
    <string name="str_setting">设置</string>
    <string name="change_order_mode">切换为预定模式</string>
    <string name="clear_cache">清除缓存</string>
    <string name="str_beijing">北京</string>
    <string name="str_logout">退出登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
