<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_phone_input"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/landing_activity_background"
        android:orientation="vertical"
        tools:context=".ui.activity.Landing.PhoneInputActivity">

    <TextView
            android:text="@string/str_your_phone_dec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@android:color/white"
            android:gravity="center"/>


    <LinearLayout
            android:background="@android:color/white"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_margin="36dip"
            android:layout_height="36dip">

        <TextView
                android:text="@string/phone_input_country_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        <EditText
            android:digits="1234567890"
            android:maxLength="11"
            android:inputType="phone|number"
                android:id="@+id/phone_edit_text"
                android:layout_width="fill_parent"
                android:background="@android:color/white"
                android:layout_height="36dip"
                android:padding="5dip"
                android:textColorHint="#AAAAAA"
                android:textSize="15dip"
                android:maxLines="1"
                android:hint="@string/phone_input_hint_phone_number" />

    </LinearLayout>

    <LinearLayout
            android:orientation="horizontal"
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_marginLeft="36dip"
            android:layout_marginRight="36dip"
            android:layout_height="36dip">

        <EditText
            android:digits="1234567890"
            android:maxLength="8"
            android:inputType="phone|number"
                android:id="@+id/code_edit_text"
                android:layout_width="wrap_content"
                android:layout_weight="3"
                android:background="@android:color/white"
                android:layout_height="36dip"
                android:padding="5dip"
                android:textColorHint="#AAAAAA"
                android:textSize="15dip"
                android:maxLines="1"
                android:hint="@string/phone_input_hint_validate_code" />

        <Button
                android:id="@+id/request_sms_code"
                android:background="@android:color/white"
                android:text="@string/phone_input_btn_action_query_code"
                android:layout_width="wrap_content"
                android:textColor="#9b9b9b"
                android:layout_weight="1"
                android:layout_height="36dip"/>

    </LinearLayout>


        <Button
            android:layout_gravity="center"
            android:background="@drawable/btn_login_selector"
            android:layout_marginLeft="36dip"
            android:layout_marginRight="36dip"
            android:layout_marginTop="30dip"
            android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:id="@+id/landing_phone_input_next_step"
                android:text="@string/next_step" />



</LinearLayout>
