<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_photo__change"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:background="@color/landing_activity_background"
        tools:context=".ui.activity.landing.PhotoChangeActivity">

    <LinearLayout
            android:orientation="vertical"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:text="@string/str_change_photo_dec"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:textColor="@android:color/white"
                android:gravity="center"/>

        <ImageView
            android:background="@drawable/dongda_2x"
                android:id="@+id/iv_head_photo"
                android:layout_marginTop="36dip"
                android:layout_width="100dip"
                android:layout_height="100dip"
                />

        <TextView
                android:id="@+id/tv_screen_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginTop="26dip"
                android:textColor="@android:color/white"
                android:gravity="center"/>

        <Button
            android:layout_marginBottom="3dp"
                android:id="@+id/btn_enter_home"
                android:text="@string/str_enter_dongda"
                android:background="@drawable/btn_login_selector"
                android:textColor="#00d1c1"
                android:layout_marginTop="36dip"
                android:layout_width="200dip"
                android:layout_height="36dip"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/landing_photo_btn_group"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="36dp"
            android:paddingRight="36dp"
            android:layout_alignParentBottom="true">

        <Button
            android:background="@drawable/btn_login_selector"
                android:id="@+id/btn_enter_album"
                android:text="@string/str_album"
                android:textColor="#00d1c1"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>

        <Button
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_login_selector"
                android:id="@+id/btn_open_camera"
                android:text="@string/str_camera"
                android:textColor="#00d1c1"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>

        <Button
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_login_selector"
                android:id="@+id/btn_enter_cancel"
                android:text="@string/str_cancel"
                android:textColor="#00d1c1"
                android:layout_marginTop="10dip"
                android:layout_width="match_parent"
                android:layout_height="36dp"/>

    </LinearLayout>

</RelativeLayout>
