<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:background="@drawable/apply_bg"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.apply.ApplyActivity">

    <ImageView
         android:id="@+id/iv_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="33dp"
        android:layout_marginLeft="6dp"
        android:background="@drawable/details_icon_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.constraint.Guideline
         android:id="@+id/gv_1"
        app:layout_constraintGuide_percent="0.273"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <android.support.constraint.Guideline
        android:id="@+id/gv_2"
        app:layout_constraintGuide_percent="0.751"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/tv_apply_dec_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-condensed"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/apply_dec_1"
        android:textColor="#FFF6F9FB"
        android:textSize="24sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gv_1"/>

    <TextView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_apply_dec_1"
        android:id="@+id/tv_apply_dec_2"
        android:fontFamily="sans-serif-condensed"
        android:typeface="sans"
        android:textStyle="bold"
        android:lineSpacingMultiplier="1.1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_dec_2"
        android:textColor="#FFF6F9FB"
        android:textSize="24sp"
        />

    <Button
         android:id="@+id/btn_apply_account"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/landing_action_button"
        android:text="@string/apply_account"
        android:textColor="#FF5CABBD"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/gv_2"/>


    <TextView
        android:letterSpacing="0.1"
        android:layout_marginBottom="2dp"
        android:id="@+id/tv_apply_dec_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_dec_3"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/tv_apply_dec_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:letterSpacing="0.1"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_apply_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
         android:id="@+id/tv_apply_dec_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apply_dec_4"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp"
        />


</android.support.constraint.ConstraintLayout>