<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/sys_bar_white"
    tools:context=".ui.activity.apply.ApplyNameActivity">

    <include layout="@layout/activity_apply_header"/>

    <View
        android:id="@+id/view_1"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:background="#FF59D5C7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/view_2"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        app:layout_constraintVertical_chainStyle="spread_inside"
        />

    <View
        android:id="@+id/view_2"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginLeft="2dp"
        android:background="#FFD8D8D8"
        app:layout_constraintLeft_toRightOf="@id/view_1"
        app:layout_constraintRight_toLeftOf="@id/view_3"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        />

    <View
        android:id="@+id/view_3"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginLeft="2dp"
        android:background="#FFD8D8D8"
        app:layout_constraintLeft_toRightOf="@id/view_2"
        app:layout_constraintRight_toLeftOf="@id/view_4"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        />


    <View
        android:id="@+id/view_4"
        android:layout_width="0dp"
        android:layout_height="4dp"
        android:layout_marginLeft="2dp"
        android:background="#FFD8D8D8"
        app:layout_constraintLeft_toRightOf="@id/view_3"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        />

    <TextView
        android:id="@+id/tv_name_dec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="41dp"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/input_name_dec"
        android:textColor="#FF404040"
        android:textSize="22sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_1"
        />

    <FrameLayout
        android:id="@+id/fl_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="39dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name_dec">

        <android.support.design.widget.TextInputEditText
            android:textColor="#FF404040"
            android:id="@+id/tet_user_name"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:background="@null"
            android:hint="@string/input_user_name_hint"/>
    </FrameLayout>


    <View
        android:id="@+id/view_line_1"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFE0E0E0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_user_name"
        />

    <TextView
        android:id="@+id/tv_service_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="64dp"
        android:text="@string/input_service_nme_dec"
        android:textColor="#FF404040"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_line_1"
        />


    <FrameLayout
        android:id="@+id/fl_service_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="39dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_service_name">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/tet_service_name"
            android:layout_width="match_parent"
            android:layout_height="21dp"
            android:background="@null"
            android:hint="@string/input_service_name_hint"/>
    </FrameLayout>


    <View
        android:id="@+id/view_line_2"
        android:layout_width="335dp"
        android:layout_height="1dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFE0E0E0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fl_service_name"
        />


</android.support.constraint.ConstraintLayout>