<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/activity_landing"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg"
        tools:context=".ui.activity.Landing.LandingActivity">

    <android.support.constraint.Guideline
         android:id="@+id/gl_root"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.214"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>




    <ImageView
        app:layout_constraintTop_toBottomOf="@id/gl_root"
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/login_logo_white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/iv_login_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_landing_dec"
        android:textColor="#FFFFFFFF"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />



    <RelativeLayout
        app:layout_constraintBottom_toTopOf="@id/rl_wechat_login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
         android:id="@+id/rl_phone_login"
        android:background="@drawable/landing_action_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="23dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:id="@+id/tv_phone_login"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/phone_login"
            android:textColor="#FF59D5C7"
            android:textSize="17sp"
            />



    </RelativeLayout>

    <RelativeLayout
        android:layout_marginTop="24dp"
        android:id="@+id/rl_wechat_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
       >


        <TextView

            android:layout_centerInParent="true"
            android:id="@+id/tv_wechat_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/wechat_login"
            android:textColor="#FFFFFFFF"
            android:textSize="15sp"
            />

        <ImageView
            android:layout_marginRight="13dp"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tv_wechat_login"
            android:background="@drawable/login_icon_wechat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
