<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFFFF"
    tools:context="com.blackmirror.dongda.ui.activity.SettingActivity">

    <android.support.v7.widget.Toolbar
        app:layout_constraintBottom_toTopOf="@id/tv_change_order_mode"
        android:layout_marginBottom="14dp"
        app:layout_goneMarginBottom="14dp"
        android:id="@+id/tb_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/sys_bar_white"
        app:contentInsetStart="0dp"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <ImageView
                android:id="@+id/iv_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="9dp"
                android:background="@drawable/icon_back_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                android:id="@+id/tv_home_head_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_setting"
                android:textColor="#FF0D0D0D"
                android:textSize="17sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <View
                android:background="#0D000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_width="0dp"
                android:layout_height="0.5dp"/>


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:visibility="visible"
        android:layout_marginLeft="20dp"
        android:paddingTop="22dp"
        android:paddingBottom="21dp"
         android:id="@+id/tv_change_order_mode"
        app:layout_constraintTop_toBottomOf="@id/tb_toolbar"
        android:layout_width="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content"
        android:text="@string/change_order_mode"
        android:textColor="#FF404040"
        android:textSize="15sp"
        />


    <TextView
         android:id="@+id/tv_clear_cache"
        app:layout_constraintTop_toBottomOf="@id/tv_change_order_mode"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:paddingTop="22dp"
        android:paddingBottom="21dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clear_cache"
        android:textColor="#FF404040"
        android:textSize="15sp"
        />

    <TextView
         android:id="@+id/tv_cache_size"
        android:layout_marginRight="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_clear_cache"
        app:layout_constraintBottom_toBottomOf="@id/tv_clear_cache"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:text="200KB"
        android:textColor="#FFA6A6A6"
        android:textSize="15sp"
        />

    <TextView
         android:id="@+id/tv_logout"
        app:layout_constraintTop_toBottomOf="@id/tv_clear_cache"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="20dp"
        android:paddingTop="22dp"
        android:paddingBottom="21dp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="退出登录"
        android:textColor="#FF404040"
        android:textSize="15sp"
        />


    <TextView
         android:id="@+id/tv_version"
        android:layout_marginBottom="21dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="V0.0.0"
        android:textColor="#FFA6A6A6"
        android:textSize="11sp"
        />

</android.support.constraint.ConstraintLayout>
